--- a/CakeStore/Views/Shared/_Layout.cshtml
+++ b/CakeStore/Views/Shared/_Layout.cshtml
@@ -5,16 +5,35 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
+    <script type="text/javascript">
+            @*
+            //Move this to a section
+            //this only needs to be here is user is not logged in.
+            *@
+            $(document).ready(function () {
+                $("#userName").keydown(function (event) {
+                    var s = $("#userName").val();
+                    if (event.keyCode == '13') {
+                        $.ajax({
+                            url: '@Url.Action("StartSession")',
+                            type: 'POST',
+                            dataType: 'JSON',
+                            contentType: 'application/JSON',
+                            data: "{userName:'"+ s + "'}",
+                            success: function(result) {
+                                alert ("success");
+                            }
+                        });
+                    }
+                })
+            });
+    </script>
 </head>
 <body>
     <div class="page">
         <header>
             <div id="title">
                 <h1>My MVC Application</h1>
-            </div>
-            <div id="logindisplay">
-                @Html.Partial("_LogOnPartial")
             </div>
         </header>
         <section id="main">
