--- a/CakeStore/Views/Shared/_Layout.cshtml
+++ b/CakeStore/Views/Shared/_Layout.cshtml
@@ -5,29 +5,7 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
-    <script type="text/javascript">
-            @*
-            //Move this to a section
-            //this only needs to be here is user is not logged in.
-            *@
-            $(document).ready(function () {
-                $("#userName").keydown(function (event) {
-                    var s = $("#userName").val();
-                    if (event.keyCode == '13') {
-                        $.ajax({
-                            url: '@Url.Action("StartSession")',
-                            type: 'POST',
-                            dataType: 'JSON',
-                            contentType: 'application/JSON',
-                            data: "{userName:'"+ s + "'}",
-                            success: function(result) {
-                                alert ("success");
-                            }
-                        });
-                    }
-                })
-            });
-    </script>
+    @RenderSection("Scripts", required: false)
 </head>
 <body>
     <div class="page">
